mutants.out/log/replace_read_model_data_expectations_with_Default__default()_in_src_test_read_model.rs_21.log

*** replace read_model_data_expectations with Default::default() in src/test/read_model.rs:21
*** --- src/test/read_model.rs
+++ replace read_model_data_expectations with Default::default()
@@ -14,41 +14,17 @@
 struct ReadModelDataExpectations {
     serial: Serial<u8>,
     aux: Generic<PinTransaction>,
     m0: Generic<PinTransaction>,
     m1: Generic<PinTransaction>,
 }
 
 fn read_model_data_expectations(model_data: ModelData) -> ReadModelDataExpectations {
-    let bytes = model_data.to_bytes();
-    let serial = Serial::<u8>::new(&[
-        SerialTransaction::write(0xC3),
-        SerialTransaction::write(0xC3),
-        SerialTransaction::write(0xC3),
-        SerialTransaction::read(0xC3),
-        SerialTransaction::read(bytes[0]),
-        SerialTransaction::read(bytes[1]),
-        SerialTransaction::read(bytes[2]),
-    ]);
-    let aux = Pin::new(&vec![
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(Low),
-        PinTransaction::get(High),
-    ]);
-    let m0 = Pin::new(&vec![PinTransaction::set(Low)]);
-    let m1 = Pin::new(&vec![PinTransaction::set(Low)]);
-    ReadModelDataExpectations {
-        serial,
-        aux,
-        m0,
-        m1,
-    }
+Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 use proptest::prelude::*;
 proptest! {
     #![proptest_config(ProptestConfig {
         cases: 10000,
         .. ProptestConfig::default()
     })]

*** run /home/rafaelbachmann/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo check --tests
*** cargo result: Exited(101) in 0.266sW8Sm9N)
warning: unused imports: `High`, `Low`, `Mock as Pin`, `Transaction as SerialTransaction`
  --> src/test/read_model.rs:6:9
   |
6  |         Mock as Pin,
   |         ^^^^^^^^^^^
7  |         State::{High, Low},
   |                 ^^^^  ^^^
...
10 |     serial::{Mock as Serial, Transaction as SerialTransaction},
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `ReadModelDataExpectations: std::default::Default` is not satisfied
  --> src/test/read_model.rs:22:1
   |
22 | Default::default() /* ~ changed by cargo-mutants ~ */
   | ^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `ReadModelDataExpectations`

For more information about this error, try `rustc --explain E0277`.
warning: `ebyte-e32` (lib test) generated 1 warning
error: could not compile `ebyte-e32` due to previous error; 1 warning emitted
